Fix DCHECK when opening two password bubbles one after another.

The test reproduced this by bringing the save bubble after the autosignin. Changing the state forced the bubble to close. However, it fades out and closes later. The second attempt to close was ignored and DCHECK fired.

BUG=626759

Review-Url: https://codereview.chromium.org/2188623007
Cr-Commit-Position: refs/heads/master@{#408438}

Former-commit-id: f79d8967f4c6bc91dfb93ffd4f7972a2e39fd05e